# ia-assistente

./: .env  App.rar  README.md  app22.py  bd.sql  chatbot.py  documentacao.doc  passo_a_passo.rtf  pyproject.toml  requirements.txt  sistema-especialista.code-workspace  testaConexao.py  text.py
APP/: app.py  styles.css  teste.html
App/: app.py  styles.css  teste.html
Encontros/Reuniões/: 02032024.txt  04032024.txt  07032024.txt  09032024.txt  14032024.txt  16032024.txt  21032024.txt  23032024.txt  27042024.txt
chatbot2/: .env  .~lock.passo_a_passo.rtf#  app22.py  chatbot.py  passo_a_passo.rtf  pyproject.toml
chatbot2/utils/: .env  testaConexao.py  text.py
utils/: chatbot.py  text.py
